<resources>
    <string name="app_name">LoginWithAnimation</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Abadikan Semua Moment Indah Mu</string>
    <string name="title_welcome_page">Selamat datang di Story App</string>
    <string name="title_signup_page">Silahkan Lengkapi Data Diri Anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan data Anda</string>
    <string name="title_login_page">Silahkkan Login ke Akun Anda</string>
    <string name="name">Nama</string>
    <string name="nameUser">Nama User</string>
    <string name="message_main_page">Selamat Datang di Story App.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="password_error_message">Password harus minimal 8 karakter</string>
    <string name="success">sukses</string>
    <string name="failed">Akun anda belum terdaftar. Silahkan daftar terlebih dahulu</string>
    <string name="AppBar">StoryApp</string>
    <string name="foto">Foto Story</string>
    <string name="description">Description</string>
    <string name="btn_add_story">Button Add Story</string>
    <string name="name_error_register">Masukkan nama lengkap Anda</string>
    <string name="email_error_register">Masukkan email Anda</string>
    <string name="password_error_register">Masukkan password Anda</string>
    <string name="input_name">input nama</string>
    <string name="input_email">input email</string>
    <string name="Masuk">Masuk</string>
    <string name="Start">Start</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permission_no_granted">tidak dapat mengakses, tidak diizinkan</string>
    <string name="camera_x">CameraX</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="not_success">Akun tidak berhasil dibuat. Pastikan menggunakan email yang valid.</string>
</resources>