<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addStory.AddStory">

    <androidx.cardview.widget.CardView
        android:id="@+id/AppBar"
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/NameAppBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|start"
            android:text="@string/AppBar"
            android:layout_gravity="center_vertical" />

        <ImageButton
            android:id="@+id/btnAddStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_add_story"
            android:layout_gravity="right|center_vertical"
            android:padding="20sp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:contentDescription="@string/btn_add_story"
            android:layout_marginEnd="23dp"
            tools:ignore="RtlHardcoded" />

    </androidx.cardview.widget.CardView>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cameraXButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppBar"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/cameraXButton"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:drawableLeft="@drawable/btn_camera"
        android:text="@string/camera_x"
        android:textSize="11sp"
        app:backgroundTint="@color/Button"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="25dp"
        android:drawableLeft="@drawable/btn_photo"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/gallery"
        android:textSize="13sp"
        app:backgroundTint="@color/Button"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/btn_upload"
        android:text="@string/upload"
        app:backgroundTint="@color/Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>