<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailStory">

    <androidx.cardview.widget.CardView
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/navy"
        style="@style/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/NameAppBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|start"
            android:text="@string/AppBar"
            android:layout_gravity="center_vertical" />

        <ImageButton
            android:id="@+id/btnAddStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_add_story"
            android:layout_gravity="right|center_vertical"
            android:padding="20sp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:contentDescription="@string/btn_add_story"
            android:layout_marginEnd="23dp"
            tools:ignore="RtlHardcoded" />

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/bar_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/description"
        android:transitionName="image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppBar"
        tools:src="@tools:sample/avatars" />


    <TextView
        android:id="@+id/nameUser"
        android:transitionName="name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-thin"
        tools:text="@tools:sample/full_names"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        tools:text="@tools:sample/lorem/random"
        android:transitionName="description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameUser" />


</androidx.constraintlayout.widget.ConstraintLayout>